syntax = "proto3";

option go_package = "github.com/mihajlo-ra92/XML/common/booking";

package booking;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

service BookingService{
    rpc Get(GetRequest) returns(GetResponse) {
        option (google.api.http) = {
                get: "/booking/{id}"
        };
    }
    rpc GetAll(GetAllRequest) returns(GetAllResponse){
        option (google.api.http) = {
                get: "/booking"
        };
    }
    rpc CreateBooking(CreateBookingRequest) returns(CreateBookingResponse){
    }
    rpc GuestReserveAccommodation(GuestReserveAccommodationRequest) returns(GuestReserveAccommodationResponse){
    }
    rpc BookingAccept(BookingAcceptRequest) returns(BookingAcceptResponse){
    }
    rpc BookingDeny(BookingDenyRequest) returns(BookingDenyResponse){
    }
    rpc GetByAccomodationIdandDataRange(GetByAccomodationIdandDataRangeRequest) returns(GetByAccomodationIdandDataRangeResponse){
    }
    rpc ReservationCanceling(ReservationCancelingRequest) returns(ReservationCancelingResponse){
    }
    rpc GetAllByUserAndType(GetAllByUserRequest) returns(GetAllByUserResponse){
        option (google.api.http) = {
            post: "/booking/byUser"
            body: "*"
        };
    }
    rpc DeleteBooking(DeleteBookingRequest) returns(DeleteBookingResponse){
    }
    rpc DeleteBookingsByGuestId(DeleteBookingByGuestIdRequest) returns(DeleteBookingByGuestIdResponse){
    }
    rpc DeleteBookingsByAccommodationId(DeleteBookingByAccommodationIdRequest) returns(DeleteBookingByAccommodationIdResponse){
    }
    rpc GetByAccommodationId(GetByAccommodationIdRequest) returns(GetByAccommodationIdResponse){
    }
    rpc GetBookingByAccommodationAndGuestId(GetBookingByAccommodationAndGuestIdRequest) returns(GetBookingByAccommodationAndGuestIdResponse){
    }
}

message GetByAccommodationIdRequest{
    string accommodationId = 1;
}

message GetByAccommodationIdResponse{
    repeated Booking bookings = 1;
}

message GetBookingByAccommodationAndGuestIdRequest{
    string accommodationId = 1;
    string guestId = 2;
}

message GetBookingByAccommodationAndGuestIdResponse{
    repeated Booking bookings = 1;
}

message DeleteBookingByAccommodationIdRequest{
    string accommodationId = 1;
}

message DeleteBookingByAccommodationIdResponse{
    string message = 1;
}

message DeleteBookingByGuestIdRequest{
    string userId = 1;
}

message DeleteBookingByGuestIdResponse{
    string message = 1;
}

message DeleteBookingRequest{
    string bookingId = 1;
}
message DeleteBookingResponse{
    Booking deletedBooking = 1;
}
message GetAllByUserRequest{
    string id = 1;
    enum BookingType{
        CustomPrice = 0;
        Reserved = 1;
        Booked = 2;
        Canceled = 3;
    }
    BookingType bookingType = 3;
}

message GetAllByUserResponse{
    repeated Booking bookings = 1;
}

message ReservationCancelingRequest{
    string id = 1;
}

message ReservationCancelingResponse{
    Booking booking = 1;
}

message GetByAccomodationIdandDataRangeRequest{
    string id = 1;
    google.protobuf.Timestamp start_date = 2;
    google.protobuf.Timestamp end_date = 3;
}

message GetByAccomodationIdandDataRangeResponse{
    repeated Booking bookings = 1;
}

message GetRequest{
    string id = 1;
}

message GetResponse{
    Booking booking = 1;
}

message GetAllRequest{
}
message GetAllResponse{
    repeated Booking bookings = 1;
}
message CreateBookingRequest{
    Booking booking = 1;
}

message CreateBookingResponse{
    Booking booking = 1;
}

message GuestReserveAccommodationRequest{
    Booking booking = 1;
}

message GuestReserveAccommodationResponse{
    Booking booking = 1;
}

message BookingAcceptRequest{
    Booking booking = 1;
}

message BookingAcceptResponse{
    Booking booking = 1;
}

message BookingDenyRequest{
    Booking booking = 1;
}

message BookingDenyResponse{
    string message = 1;
}

message Booking{
    string id = 1;
    string accommodationId = 2;
    string guestId = 3;
    uint32 price = 4;
    enum PriceType {
        Regular = 0;
        PerGuest = 1;
    }
    PriceType priceType = 6;
    uint32 numberOfGuests = 7;
    enum BookingType{
        CustomPrice = 0;
        Reserved = 1;
        Booked = 2;
        Canceled = 3;
    }
    BookingType bookingType = 9;
    google.protobuf.Timestamp start_date = 10;
    google.protobuf.Timestamp end_date = 11;
}
